# drob

./: .gitignore  .gitmodules  Makefile  README.md  libdrob.pc.in  meson.build
include/: drob.h  meson.build
libs/: meson.build
src/: BinaryPool.cpp  BinaryPool.hpp  Function.cpp  Function.hpp  ICFG.hpp  Instruction.cpp  Instruction.hpp  InstructionInfo.cpp  InstructionInfo.hpp  MemProtCache.cpp  MemProtCache.hpp  Node.hpp  NodeCallback.hpp  OpcodeInfo.hpp  Pass.hpp  ProgramState.cpp  ProgramState.hpp  RegisterInfo.cpp  RegisterInfo.hpp  Registry.hpp  Rewriter.cpp  Rewriter.hpp  RewriterCfg.hpp  SuperBlock.cpp  SuperBlock.hpp  Utils.hpp  arch.hpp  drob.c  drob_internal.cpp  drob_internal.h  meson.build
src/passes/: BlockLayoutOptimizationPass.hpp  CodeGenerationPass.hpp  DeadCodeEliminationPass.hpp  DeadWriteEliminationPass.hpp  DumpGeneratedCodePass.hpp  DumpPass.hpp  ICFGReconstructionPass.hpp  InstructionSpecializationPass.hpp  LivenessAnalysisPass.hpp  MemoryOperandOptimizationPass.hpp  SimpleLoopUnrollingPass.hpp  StackAnalysisPass.hpp
src/util/: bitmap.c  bitmap.h
src/x86/: Abi.cpp  Converter.cpp  Converter.hpp  Decoder.cpp  Emulator.cpp  Emulator.hpp  Encoder.cpp  Encoder.hpp  Instruction.cpp  OpcodeInfo.cpp  OpcodeInfo.hpp  Opcodes.inc.h  Predicate.cpp  Predicate.hpp  RegisterInfo.cpp  Specialize.cpp  Specialize.hpp  arch_def.h  meson.build  x86.hpp
tests/: Makefile  meson.build  simple.c
