include_dirs = [include_directories('.')]
drob_src = [files(
    'BinaryPool.cpp',
    'Function.cpp',
    'Instruction.cpp',
    'InstructionInfo.cpp',
    'MemProtCache.cpp',
    'ProgramState.cpp',
    'RegisterInfo.cpp',
    'Rewriter.cpp',
    'SuperBlock.cpp',
    'drob.c',
    'drob_internal.cpp',
    'util/bitmap.c',
)]

subdir('x86')
